--- a/RDIP/Codes/style.css
+++ b/RDIP/Codes/style.css
@@ -52,3 +52,14 @@ div {
     display:  block;
     font-size: 100%;   
 }
+
+
+div#but {
+    visibility: hidden;
+}
+
+button {
+    width: auto;
+    height: 20px;
+    padding: 5px;
+}
